# scute

./: .gitignore  README.md  example.py  main.py  pyproject.toml
.github/workflows/: build_docs.yml  publish.yml
assets/: darkmode.css  docs.css
output/myDatapack/: pack.mcmeta
output/myDatapack/data/myFirstDatapack/functions/: myFunction.mcfunction
pdoc/config/: config.mako  head.mako  logo.mako
pdoc/documentation/: functions.md  index.md  nbt.md
scute/: __init__.py  advancements.py  biomes.py  blocks.py  commands.py  data_sources.py  data_types.py  datasources.py  datatypes.py  dimensions.py  enchantments.py  function.py  heightmaps.py  items.py  json_text.py  jsontext.py  recipes.py  relations.py  scoreboards.py  tags.py  utils.py
scute/documentation/: functions.md
scute/internal/: dictToNBT.py  dict_to_NBT.py  utils.py
scute/internal_utils/: dictToNBT.py
scute/pdoc/config/: config.mako  head.mako  logo.mako
scute/pdoc/css/: darkmode.css
