#[build-system]
#requires = ["setuptools"]
#build-backend = "setuptools.build_meta"
#
#[project]
#name = "scutemc"
#version = "0.0.1"
#description = "A Python library for making Minecraft datapacks."
#requires-python = ">=3.11"
#readme = "README.md"
#
#[tool.setuptools.package-dir]
#scute = "scute"

[tool.poetry]
name = "scutemc"
version = "0.0.1"
description = "A Python library for making Minecraft datapacks."
authors = [
    "TorNato"
]
documentation = "https://t0rnato.github.io/scute"
repository = "https://github.com/T0RNATO/scute"
packages = [
    {include = "scute"}
]
readme = "README.md"